--- a/minipod.html
+++ b/minipod.html
@@ -41,12 +41,11 @@
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
 
   <!-- Javascript -->
-  <script defer src="/app/js/home.js"></script>
-  <script defer src="/app/js/detect-scroll.js"></script>
+  <script defer src="/app/js/detect-scroll-m300.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
 
-  <title>Digital Shovel • Minipod</title>
+  <title>Digital Shovel • M300 Minipod</title>
 
   <!-- Hotjar Tracking Code for https://digitalshovel.com/ -->
   <script>
@@ -120,7 +119,7 @@
             <a class="dropdown__menu-item dropdown__link" href="minipod" tabindex="-1" aria-role="menu-item">
               <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
               <div class="dropdown__text">
-                <h5>Minipod Container
+                <h5>M300 Minipod
                   <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
@@ -129,7 +128,22 @@
                       stroke-linejoin="round" />
                   </svg>
                 </h5>
-                <small>Plug and play crypto mining containers</small>
+                <small>Outdoor Solution</small>
+              </div>
+            </a>
+            <a class="dropdown__menu-item dropdown__link" href="i300" tabindex="-1" aria-role="menu-item">
+              <img class="icon--md" src="images/icons/icon_i300.svg" alt="Minipod Icon" aria-hidden="true">
+              <div class="dropdown__text">
+                <h5>i300 Minipod
+                  <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                      stroke-linejoin="round" />
+                    <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                      stroke-linejoin="round" />
+                  </svg>
+                </h5>
+                <small>Indoor Solution</small>
               </div>
             </a>
           </div>
@@ -178,7 +192,8 @@
 
       <div class="hero__text hero__text--product flex flex-col ai-c">
         <h4>Featured Product</h4>
-        <h1>M300 <emphasis class="text--blue">Minipod</emphasis>
+        <h1>
+          <emphasis class="text--blue">M300</emphasis> Minipod
         </h1>
       </div>
 
