--- a/pages/archived/team.html
+++ b/pages/archived/team.html
@@ -73,7 +73,7 @@
               <a class="dropdown__link" href="minipod">
                 <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon">
                 <div class="dropdown__text">
-                  <h5>Minipod Container
+                  <h5>M300 Minipod
                     <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                       xmlns="http://www.w3.org/2000/svg">
                       <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
@@ -82,7 +82,7 @@
                         stroke-linejoin="round" />
                     </svg>
                   </h5>
-                  <small>Plug and play crypto mining containers</small>
+                  <small>Outdoor Solution</small>
                 </div>
               </a>
             </li>
