--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <a class="dropdown__menu-item dropdown__link" href="minipod" tabindex="-1" aria-role="menu-item">
               <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
               <div class="dropdown__text">
-                <h5>Minipod Container
+                <h5>M300 Minipod
                   <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
@@ -129,7 +129,22 @@
                       stroke-linejoin="round" />
                   </svg>
                 </h5>
-                <small>Plug and play crypto mining containers</small>
+                <small>Outdoor Solution</small>
+              </div>
+            </a>
+            <a class="dropdown__menu-item dropdown__link" href="i300" tabindex="-1" aria-role="menu-item">
+              <img class="icon--md" src="images/icons/icon_i300.svg" alt="Minipod Icon" aria-hidden="true">
+              <div class="dropdown__text">
+                <h5>i300 Minipod
+                  <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                      stroke-linejoin="round" />
+                    <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                      stroke-linejoin="round" />
+                  </svg>
+                </h5>
+                <small>Indoor Solution</small>
               </div>
             </a>
           </div>
