minor changes to i300 page

--- a/i300.html
+++ b/i300.html
@@ -175,7 +175,7 @@
     </div>
   </nav>
 
-  <a href="#specifications" class="scroll scroll__product">
+  <a href="#specifications" class="scroll scroll__product scroll__product--i300">
     <span class="scroll__text">scroll for more</span>
     <svg class="scroll__arrow" width="13" height="12" viewBox="0 0 13 12" fill="none"
       xmlns="http://www.w3.org/2000/svg">
@@ -187,8 +187,11 @@
 
     <section id="product" class="hero container hero__feature flex flex-col ai-c">
 
-      <div class="hero__text hero__text--product flex flex-col ai-c">
-        <h4>Featured Product</h4>
+      <div class="hero__text hero__text--product flex flex-col ai-c gap--sm">
+        <div class="flex flex-col-mobile ai-c gap--sm">
+          <h4>Indoor Solution</h4>
+          <a href="minipod.html" class="btn btn--switch">switch to outdoor</a>
+        </div>
         <h1>
           <emphasis class="text--blue">i300</emphasis> Minipod</emphasis>
         </h1>
