--- a/minipod.html
+++ b/minipod.html
@@ -190,8 +190,11 @@
 
     <section id="product" class="hero container hero__feature flex flex-col ai-c">
 
-      <div class="hero__text hero__text--product flex flex-col ai-c">
-        <h4>Featured Product</h4>
+      <div class="hero__text hero__text--product flex flex-col gap--sm ai-c">
+        <div class="flex flex-col-mobile ai-c gap--sm">
+          <h4>Outdoor Solution</h4>
+          <a href="i300.html" class="btn btn--switch">switch to indoor</a>
+        </div>
         <h1>
           <emphasis class="text--blue">M300</emphasis> Minipod
         </h1>
