--- a/i300.html
+++ b/i300.html
@@ -190,7 +190,7 @@
       <div class="hero__text hero__text--product flex flex-col ai-c gap--sm">
         <div class="flex flex-col-mobile ai-c gap--sm">
           <h4>Indoor Solution</h4>
-          <a href="minipod.html" class="btn btn--switch">switch to outdoor</a>
+          <a href="minipod" class="btn btn--switch">switch to outdoor</a>
         </div>
         <h1>
           <emphasis class="text--blue">i300</emphasis> Minipod</emphasis>
