--- a/m300.html
+++ b/m300.html
@@ -116,7 +116,7 @@
             </svg>
           </button>
           <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
-            <a class="dropdown__menu-item dropdown__link" href="minipod" tabindex="-1" aria-role="menu-item">
+            <a class="dropdown__menu-item dropdown__link" href="m300" tabindex="-1" aria-role="menu-item">
               <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
               <div class="dropdown__text">
                 <h5>M300 Minipod
@@ -721,13 +721,13 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="minipod" class="footer__list-item">Minipod</a></li>
+            <li><a href="m300" class="footer__list-item">Minipod</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="minipod" class="footer__list-item">Products</a></li>
+            <li><a href="m300" class="footer__list-item">Products</a></li>
             <!-- <li><a href="turnkey-solutions" class="footer__list-item">Turn-Key Solutions</a></li> -->
             <li><a href="contact" class="footer__list-item">Contact</a></li>
           </ul>
