added a delay on the bear market promo hover animation

--- a/m300.html
+++ b/m300.html
@@ -23,7 +23,7 @@
 
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="../dist/style.min.css?v=1.5">
+  <link rel="stylesheet" href="../dist/style.min.css?v=1.6">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -44,6 +44,7 @@
   <script defer src="/app/js/detect-scroll-m300.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
+  <script defer src="/app/js/bear-market-promo.js"></script>
 
   <title>Digital Shovel • M300 Minipod</title>
 
