fixed scroll for more for all displays

--- a/m300.html
+++ b/m300.html
@@ -179,17 +179,9 @@
     </div>
   </nav>
 
-  <a href="#specifications" class="scroll scroll__product">
-    <span class="scroll__text">scroll for more</span>
-    <svg class="scroll__arrow" width="13" height="12" viewBox="0 0 13 12" fill="none"
-      xmlns="http://www.w3.org/2000/svg">
-      <path d="M2.5 1L7.95455 6L2.5 11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-    </svg>
-  </a>
-
   <main class="main">
 
-    <section id="product" class="hero container hero__feature flex flex-col ai-c">
+    <section id="product" class="hero container hero__m300 flex flex-col ai-c">
 
       <div class="hero__text hero__text--product flex flex-col gap--sm ai-c">
         <div class="flex flex-col-mobile ai-c gap--sm">
@@ -385,6 +377,14 @@
       </div>
 
     </section>
+
+    <a href="#specifications" class="scroll scroll__product">
+      <span class="scroll__text">scroll for more</span>
+      <svg class="scroll__arrow" width="13" height="12" viewBox="0 0 13 12" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <path d="M2.5 1L7.95455 6L2.5 11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+      </svg>
+    </a>
 
     <section id="specifications" class="card__grid">
       <div class="card-1 flex flex-col gap--md">
