--- a/thanks.html
+++ b/thanks.html
@@ -179,7 +179,7 @@
 
   <footer class="footer">
     <div class="container footer__container">
-      <div class="flex flex-col-tablet jc-sb gap--xlg">
+      <div class="flex flex-col--lg-tablet jc-sb gap--xlg">
         <div class="footer__column">
           <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
@@ -203,8 +203,8 @@
         </div>
       </div>
       <div class="footer__divider"></div>
-      <div class="flex flex-col-tablet jc-sb gap--sm">
-        <div class="flex flex-col-tablet gap--sm">
+      <div class="flex flex-col--lg-tablet jc-sb gap--sm">
+        <div class="flex flex-col--lg-tablet gap--sm">
           <small class="footer__copyright">© 2023 Digital Shovel Holdings Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
