--- a/voskcoin.html
+++ b/voskcoin.html
@@ -202,7 +202,7 @@
       <img src="images/illustrations/ds-X-vosk.svg" alt="Partnership Digital Shovel X VoskCoin" />
     </section>
 
-    <section class="promotion flex flex-col-mobile jc-sb gap--xxlg">
+    <section class="promotion flex flex-col--lg-tablet jc-sb gap--xxlg">
       <div class="card__youtube">
         <div class="flex flex-col gap--sm">
           <a class="card__youtube--link flex ai-c gap--sm" target="_blank" href="https://www.youtube.com/@voskcoin">
@@ -542,7 +542,7 @@
 
   <footer class="footer">
     <div class="container footer__container">
-      <div class="flex flex-col-tablet jc-sb gap--xlg">
+      <div class="flex flex-col--lg-tablet jc-sb gap--xlg">
         <div class="footer__column">
           <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
@@ -566,8 +566,8 @@
         </div>
       </div>
       <div class="footer__divider"></div>
-      <div class="flex flex-col-tablet jc-sb gap--sm">
-        <div class="flex flex-col-tablet gap--sm">
+      <div class="flex flex-col--lg-tablet jc-sb gap--sm">
+        <div class="flex flex-col--lg-tablet gap--sm">
           <small class="footer__copyright">© 2023 Digital Shovel Holdings Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
