--- a/i300.html
+++ b/i300.html
@@ -181,7 +181,7 @@
     <section id="product" class="hero container hero__feature flex flex-col ai-c">
 
       <div class="hero__text hero__text--product flex flex-col ai-c gap--sm">
-        <div class="flex flex-col-mobile ai-c gap--sm">
+        <div class="flex flex-col--lg-tablet ai-c gap--sm">
           <h4>Indoor Solution</h4>
           <a href="m300" class="btn btn--switch">switch to outdoor</a>
         </div>
@@ -190,7 +190,7 @@
         </h1>
       </div>
 
-      <div class="gallery">
+      <div class="gallery gallery__i300">
         <img class="photo photo-1 photo--mobile-small" src="images/photos/minipod/i300-back.jpg"
           alt="i300 Minipod Back View">
         <img class="photo photo-2 photo--mobile-small" src="images/photos/minipod/i300-front.jpg"
@@ -315,7 +315,7 @@
 
   <footer class="footer">
     <div class="container footer__container">
-      <div class="flex flex-col-tablet jc-sb gap--xlg">
+      <div class="flex flex-col--lg-tablet jc-sb gap--xlg">
         <div class="footer__column">
           <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
@@ -339,8 +339,8 @@
         </div>
       </div>
       <div class="footer__divider"></div>
-      <div class="flex flex-col-tablet jc-sb gap--sm">
-        <div class="flex flex-col-tablet gap--sm">
+      <div class="flex flex-col--lg-tablet jc-sb gap--sm">
+        <div class="flex flex-col--lg-tablet gap--sm">
           <small class="footer__copyright">© 2023 Digital Shovel Holdings Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
