--- a/turnkey-solutions.html
+++ b/turnkey-solutions.html
@@ -203,7 +203,7 @@
           you do best.
         </p>
       </div>
-      <div class="flex flex-col-mobile jc-sb gap--lg">
+      <div class="flex flex-col--lg-tablet jc-sb gap--lg">
         <div class="turnkey__mining">
           <h2>Start mining in</h2>
           <h3>45 days</h3>
@@ -252,7 +252,7 @@
       </div>
     </section>
 
-    <section class="turnkey__pricing flex flex-col-mobile jc-sb ai-c gap--xlg">
+    <section class="turnkey__pricing flex flex-col--lg-tablet jc-sb ai-c gap--xlg">
       <div class="flex flex-col">
         <h5>Power Deposit</h5>
         <h2 class="flex ai-end gap--sm">$42k
@@ -288,7 +288,7 @@
 
   <footer class="footer">
     <div class="container footer__container">
-      <div class="flex flex-col-tablet jc-sb gap--xlg">
+      <div class="flex flex-col--lg-tablet jc-sb gap--xlg">
         <div class="footer__column">
           <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
@@ -312,8 +312,8 @@
         </div>
       </div>
       <div class="footer__divider"></div>
-      <div class="flex flex-col-tablet jc-sb gap--sm">
-        <div class="flex flex-col-tablet gap--sm">
+      <div class="flex flex-col--lg-tablet jc-sb gap--sm">
+        <div class="flex flex-col--lg-tablet gap--sm">
           <small class="footer__copyright">© 2023 Digital Shovel Holdings Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
