added animation to switch icon

--- a/m300.html
+++ b/m300.html
@@ -187,7 +187,17 @@
       <div class="hero__text hero__text--product flex flex-col gap--sm ai-c">
         <div class="flex flex-col--sm-mobile ai-c gap--sm">
           <h4>Outdoor Solution</h4>
-          <a href="i300" class="btn btn--switch">switch to indoor</a>
+          <a href="i300" class="btn btn--switch">switch to indoor
+            <svg class="switch-icon" width="23" height="22" viewBox="0 0 23 22" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M6.533 9.984C6.71 7.149 8.918 5 11.5 5c1.19 0 2.287.448 3.151 1.21a1 1 0 0 0 1.322-1.501A6.745 6.745 0 0 0 11.5 3C7.73 3 4.742 6.115 4.533 9.927l-.756-.952a.705.705 0 1 0-1.105.873l2.032 2.529a.997.997 0 0 0 1.222.289c.136-.065.257-.159.353-.275L8.56 9.82a.698.698 0 0 0-.061-.967.697.697 0 0 0-.47-.16.707.707 0 0 0-.57.259l-.927 1.032Z"
+                fill="#307FE2" />
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M16.476 10.842c-.096 2.922-2.341 5.16-4.976 5.16-1.234 0-2.37-.482-3.248-1.296a1 1 0 0 0-1.36 1.467c1.223 1.133 2.835 1.83 4.608 1.83 3.829 0 6.85-3.212 6.975-7.104l.707.892a.705.705 0 1 0 1.105-.873l-2.031-2.529a.997.997 0 0 0-1.222-.289 1.034 1.034 0 0 0-.354.275l-2.097 2.571a.698.698 0 0 0 .062.967c.131.109.299.165.47.16a.706.706 0 0 0 .569-.259l.792-.972Zm.973-1.194h.033l-.016-.02-.017.02Z"
+                fill="#B8D8FF" />
+            </svg>
+          </a>
         </div>
         <h1>
           <emphasis class="text--blue">M300</emphasis> Minipod
