styling and functional changes to m300 gallery

--- a/m300.html
+++ b/m300.html
@@ -405,11 +405,42 @@
 
         <div class="modal">
           <div class="modal__photo-container">
-            <span class="close">✖</span>
+            <span class="close">
+              <div class="line line-1"></div>
+              <div class="line line-2"></div>
+            </span>
             <div class="modal__test">
               <img src="" class="modal__photo">
-              <span class="arrow-left">←</span>
-              <span class="arrow-right">→</span>
+              <button class="btn__gallery btn__gallery-left">
+                <svg class="arrow arrow-left" width="23" height="23" viewBox="0 0 23 23" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <circle cx="11.5" cy="11.305" r="9" fill="#B8D8FF" />
+                  <g clip-path="url(#a)">
+                    <path d="m10.167 7.972 3.636 3.333-3.636 3.334" stroke="#307FE2" stroke-width="2"
+                      stroke-linecap="round" stroke-linejoin="round" />
+                  </g>
+                  <defs>
+                    <clipPath id="a">
+                      <path fill="#fff" d="M8.5 6.305h7v10h-7z" />
+                    </clipPath>
+                  </defs>
+                </svg>
+              </button>
+              <button class="btn__gallery btn__gallery-right">
+                <svg class="arrow arrow-right" width="23" height="23" viewBox="0 0 23 23" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <circle cx="11.5" cy="11.305" r="9" fill="#B8D8FF" />
+                  <g clip-path="url(#a)">
+                    <path d="m10.167 7.972 3.636 3.333-3.636 3.334" stroke="#307FE2" stroke-width="2"
+                      stroke-linecap="round" stroke-linejoin="round" />
+                  </g>
+                  <defs>
+                    <clipPath id="a">
+                      <path fill="#fff" d="M8.5 6.305h7v10h-7z" />
+                    </clipPath>
+                  </defs>
+                </svg>
+              </button>
             </div>
           </div>
         </div>
