added promo on specs for M300

--- a/m300.html
+++ b/m300.html
@@ -545,11 +545,15 @@
             stroke-linejoin="round" />
         </svg>
       </a>
-      <div class="card-9 card__secondary flex ai-c gap--md">
-        <img class="icon--md" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
-        <h6>Approx. Cost</h6>
-        <h6 class="text--blue">$39,999 - $45,500</h6>
-      </div>
+      <a class="card-9 card-9--deal flex ai-c gap--md" href="contact">
+        <img class="icon--md" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
+        <h6 class="minipod__set-heading">Bear Market Promo</h6>
+        <h6 class="text--red text--emphasis text--larger">$29,997</h6>
+        <img class="icon--sm" src="images/icons/icon_redirect-red.svg" alt="Redirect Icon">
+        <div class="card-9--popup">
+          <h6>Further discounts on high volume pricing</h6>
+        </div>
+      </a>
     </section>
 
     <section id="bundle" class="minipod">
@@ -603,6 +607,7 @@
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
                 <h6 class="minipod__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$29,997</h6>
+                <img class="icon--sm" src="images/icons/icon_redirect-red.svg" alt="Redirect Icon">
                 <div class="card-9--popup">
                   <h6>Further discounts on high volume pricing</h6>
                 </div>
@@ -634,6 +639,7 @@
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
                 <h6 class="minipod__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$86,997</h6>
+                <img class="icon--sm" src="images/icons/icon_redirect-red.svg" alt="Redirect Icon">
                 <div class="card-9--popup">
                   <h6>Further discounts on high volume pricing</h6>
                 </div>
@@ -665,6 +671,7 @@
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
                 <h6 class="minipod__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$139,997</h6>
+                <img class="icon--sm" src="images/icons/icon_redirect-red.svg" alt="Redirect Icon">
                 <div class="card-9--popup">
                   <h6>Further discounts on high volume pricing</h6>
                 </div>
@@ -696,6 +703,7 @@
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon" href="contact">
                 <h6 class="minipod__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$189,997</h6>
+                <img class="icon--sm" src="images/icons/icon_redirect-red.svg" alt="Redirect Icon">
                 <div class="card-9--popup">
                   <h6>Further discounts on high volume pricing</h6>
                 </div>
@@ -727,6 +735,7 @@
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
                 <h6 class="minipod__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$233,997</h6>
+                <img class="icon--sm" src="images/icons/icon_redirect-red.svg" alt="Redirect Icon">
                 <div class="card-9--popup">
                   <h6>Further discounts on high volume pricing</h6>
                 </div>
@@ -758,6 +767,7 @@
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
                 <h6 class="minipod__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$274,997</h6>
+                <img class="icon--sm" src="images/icons/icon_redirect-red.svg" alt="Redirect Icon">
                 <div class="card-9--popup">
                   <h6>Further discounts on high volume pricing</h6>
                 </div>
